--- a/package.json
+++ b/package.json
@@ -22,16 +22,17 @@
   },
   "dependencies": {
     "@nestjs/common": "8.4.4",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "8.4.4",
     "@nestjs/microservices": "8.4.4",
     "@nestjs/platform-express": "8.4.4",
     "@nestjs/platform-socket.io": "8.4.4",
     "@nestjs/websockets": "8.4.4",
     "@types/socket.io": "3.0.2",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
     "mqtt": "^4.3.7",
     "reflect-metadata": "0.1.13",
-    "class-validator": "0.13.2",
-    "class-transformer": "0.5.1",
     "rxjs": "7.5.5"
   },
   "devDependencies": {
