--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,21 +12,21 @@ services:
       - "9001:9001"
     command: "mosquitto -c /mosquitto-no-auth.conf"
 
-#  zigbee2mqtt:
-#    container_name: zigbee2mqtt
-#    restart: unless-stopped
-#    image: koenkk/zigbee2mqtt
-#    depends_on:
-#      - mqtt
-#    volumes:
-#      - ./zigbee2mqtt-data:/app/data
-#      - /run/udev:/run/udev:ro
-#    ports:
-#      - 8082:8080
-#    environment:
-#      - TZ=Europe/Moscow
-#    devices:
-#      - /dev/ttyUSB0:/dev/ttyUSB0
+  zigbee2mqtt:
+    container_name: zigbee2mqtt
+    restart: unless-stopped
+    image: koenkk/zigbee2mqtt
+    depends_on:
+      - mqtt
+    volumes:
+      - ./zigbee2mqtt-data:/app/data
+      - /run/udev:/run/udev:ro
+    ports:
+      - 8082:8080
+    environment:
+      - TZ=Europe/Moscow
+    devices:
+      - /dev/ttyAML2:/dev/ttyAML2
 
   portainer:
     image: portainer/portainer-ce:latest
