--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     ports:
       - "1883:1883"
       - "9001:9001"
+    expose:
+      - 1883
     command: "mosquitto -c /mosquitto-no-auth.conf"
 
   zigbee2mqtt:
@@ -22,7 +24,7 @@ services:
       - ./zigbee2mqtt-data:/app/data
       - /run/udev:/run/udev:ro
     ports:
-      - 8082:8080
+      - 8080:8080
     environment:
       - TZ=Europe/Moscow
     devices:
